--- a/package.json
+++ b/package.json
@@ -9,10 +9,33 @@
   "dependencies": {
     "expo": "^31.0.2",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "animejs": "^3.0.0",
+    "firebase": "^5.7.2",
+    "lodash.range": "^3.2.0",
+    "react-native-animate-number": "^0.1.2",
+    "react-native-circular-progress": "^1.1.0",
+    "react-native-conical-gradient-progress": "^1.0.0",
+    "react-native-firebase": "^5.1.1",
+    "react-native-render-html": "^3.10.0",
+    "react-native-svg": "^8.0.10",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^5.0.0",
+    "babel-jest": "23.6.0",
+    "jest": "23.6.0",
+    "metro-react-native-babel-preset": "0.51.1",
+    "react-move": "^2.8.0",
+    "react-test-renderer": "16.6.3"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "fonts/Lato"
+    ]
+  }
 }
